--- a/ByteMePlz.html
+++ b/ByteMePlz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ByteMePlz | The Ultimate Unblocked Hub</title>
+    <title>ByteMePlz</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
         * {
@@ -1082,8 +1082,9 @@
                 <div class="link-grid">
                     <a href="https://testingbmp.edgeone.app" class="link-card" target="_blank">
                         <div class="link-title">TestingBMP</div>
-                        <div class="link-url">testingbmp.edgeone.app</div>
-                        <div class="link-note">⚠️ Currently not working - development in progress</div>
+                        <div class="link-url">https://magiilayt.github.io/ByteMePlz/ByteMePlz.html</div>
+                        <div class="link-note">⚠️ 
+                        development in progress</div>
                     </a>
                 </div>
             </section>
