--- a/ByteMePlz.html
+++ b/ByteMePlz.html
@@ -525,8 +525,7 @@
                 <div class="version-badge">V3.0 LIVE</div>
                 <h1>ByteMePlz</h1>
                 <p class="hero-subtitle">
-                    The ultimate unblocked entertainment hub. Games, movies, music, and AI tools—all in one place. 
-                    Built for students, by students.
+                    This is ByteMePlz by some1 
                 </p>
             </div>
         </section>
