--- a/ByteMePlz.html
+++ b/ByteMePlz.html
@@ -533,6 +533,7 @@
         <!-- Updates -->
         <div class="updates">
             <h2>Latest Updates</h2>
+            <div class="update-item">V4: Added more unknown sites and made a site</div>
             <div class="update-item">V3: Added AI cheating 101 section</div>
             <div class="update-item">V2: Expanded movies and music collections</div>
             <div class="update-item">V1: Initial release with known and unknown sites</div>
