--- a/ByteMePlz.html
+++ b/ByteMePlz.html
@@ -547,7 +547,7 @@
             <div class="update-item">V3: Added AI cheating 101 section</div>
             <div class="update-item">V2: Expanded movies and music collections</div>
             <div class="update-item">V1: Initial release with known and unknown sites</div>
-            <div class="update-item feature">Feature: Custom proxy browser coming soon (HTML-based for school bypass)</div>
+            <div class="update-item feature">No Proxy Browser No More Because It Won't Work</div>
         </div>
 
         <div class="container">
