--- a/ByteMePlz.html
+++ b/ByteMePlz.html
@@ -989,7 +989,7 @@
     <!-- Loading Screen -->
     <div id="loading-overlay">
         <div class="loading-text">ByteMePlz</div>
-        <div style="color: var(--text-muted); margin-top: 20px; font-size: 0.9rem; letter-spacing: 2px;">Loading V5.0 with Bogge.tv...</div>
+        <div style="color: var(--text-muted); margin-top: 20px; font-size: 0.9rem; letter-spacing: 2px;">Loading V5.0...</div>
     </div>
 
     <!-- Particles -->
@@ -1053,7 +1053,7 @@
                 
                 <div class="watch-banner">
                     <h4><i class="ri-play-circle-line"></i> Watch Options</h4>
-                    <p>Choose your preferred streaming source. Bogge.tv recommended for best quality and reliability.</p>
+                    <p>Choose your preferred streaming source.</p>
                 </div>
 
                 <div class="player-options" id="playerOptions"></div>
@@ -1187,18 +1187,19 @@
         function renderHome(container) {
             container.innerHTML = `
                 <div class="section-header">
-                    <div class="version-badge">V5.0 BOGGE.TV EDITION</div>
+                    <div class="version-badge">V5.0 Better Movie Selection</div>
                     <h2><i class="ri-home-4-line"></i> Welcome to ByteMePlz</h2>
-                    <p style="color: var(--text-muted); font-size: 1.1rem;">Your ultimate entertainment portal with Bogge.tv integration.</p>
+                    <p style="color: var(--text-muted); font-size: 1.1rem;">IDK what you want from me.</p>
                 </div>
 
                 <div class="updates">
                     <h3><i class="ri-flashlight-line"></i> Latest Updates</h3>
                     <div class="update-item">V5: Added Bogge.tv search integration with direct movie access</div>
-                    <div class="update-item">V5: New cyan/purple cyberpunk theme - no more green!</div>
-                    <div class="update-item">V5: Enhanced UI with smooth animations and glow effects</div>
-                    <div class="update-item">V5: All known and unknown sites organized with improved navigation</div>
-                    <div class="update-item feature">Bogge.tv format: https://bogge.tv/watch-movie/watch-[title]-free-[id]</div>
+                    <div class="update-item">V4: Added more unknown sites and made a site</div>
+                    <div class="update-item">V3: Added AI cheating 101</div>
+                    <div class="update-item">V2: Added movies and music</div>
+                    <div class="update-item">V1: Added known and unknown site</div>
+                    <div class="update-item feature">ByteMePlz made by a person for people</div>
                 </div>
 
                 <div class="category">
@@ -1209,7 +1210,7 @@
                     <div class="link-grid">
                         <div class="link-card" onclick="showSection('movies')" style="cursor: pointer;">
                             <div class="link-title"><i class="ri-movie-2-line"></i> Movies</div>
-                            <div class="link-url">Bogge.tv + backup sources</div>
+                            <div class="link-url">Hey I'm famous now</div>
                             <div class="link-note">Stream the latest releases</div>
                         </div>
                         <div class="link-card" onclick="showSection('sites')" style="cursor: pointer;">
@@ -1229,7 +1230,7 @@
                         <div class="link-card">
                             <div class="link-title"><i class="ri-search-line" style="color: var(--accent-purple);"></i> Smart Search</div>
                             <div class="link-url">Type in top bar and press Enter</div>
-                            <div class="link-note">Searches Bogge.tv directly</div>
+                            <div class="link-note">Searches Bogge.tv directly (No shit)</div>
                         </div>
                         <div class="link-card">
                             <div class="link-title"><i class="ri-magic-line" style="color: var(--accent-pink);"></i> Modern Design</div>
